clusters/talos-ottawa/apps/media/app/sabnzbd/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: sabnzbd
  name: sabnzbd
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: sabnzbd
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: sabnzbd
    spec:      containers:
      - name: sabnzbd
        image: ghcr.io/home-operations/sabnzbd:4.5.3@sha256:ecb57bd6257fbfbd9aee70d8ef3df8814b7270ae793fd1f44219ae73cacd519a
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - mountPath: /config
          name: config
        - mountPath: /config/logs
          name: logs
        - mountPath: /media
          name: media
      securityContext:
        fsGroup: 0
        fsGroupChangePolicy: OnRootMismatch
        runAsGroup: 0
        runAsNonRoot: false
        runAsUser: 0
        seccompProfile:
          type: RuntimeDefault
        supplementalGroups:
        - 10000
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: sabnzbd-config
      - emptyDir: {}
        name: logs
      - name: media
        persistentVolumeClaim:
          claimName: sabnzbd-media
