clusters/talos-ottawa/apps/media/app/sabnzbd/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sabnzbd
  namespace: media
  annotations:
    item.homer.rajsingh.info/name: "SABnzbd"
    item.homer.rajsingh.info/subtitle: "NZB Download Client"
    item.homer.rajsingh.info/logo: "https://raw.githubusercontent.com/sabnzbd/sabnzbd/refs/heads/develop/icons/logo-arrow.svg"
    item.homer.rajsingh.info/keywords: "nzb, download, client"

    service.homer.rajsingh.info/name: "Media"
    service.homer.rajsingh.info/icon: "fas fa-download"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: private
      namespace: home
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: ts
      namespace: home
  hostnames:
    - "sabnzbd.${COMMON_DOMAIN}"
    - "sabnzbd.${CLUSTER_DOMAIN}"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: sabnzbd
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
